# rs-foundry

./: .gitignore  Cargo.toml  DIRTREE.txt  Makefile  README.md  docker-compose.yml
conf/base/: app.toml  quality.toml  sinks.toml  sources.toml
conf/prod/: app.toml
data/bronze/daily_example/load_date=2026-03-15/run_id=0c98f655-5079-4874-af49-9defedeaa317/: bronze_daily.json
data/bronze/daily_example/load_date=2026-03-15/run_id=25e042ed-739a-4fa1-bcba-4731e12b0faa/: bronze_daily.json
data/bronze/daily_example/load_date=2026-03-15/run_id=3557abc3-ce34-4753-af13-13c130784f39/: bronze_daily.json
data/bronze/daily_example/load_date=2026-03-15/run_id=46c7ef81-3a32-4759-a1f2-ec96a2108ddd/: bronze_daily.json
docker/: airflow.Dockerfile  notebook.Dockerfile  runner.Dockerfile  worker.Dockerfile
docker/postgres-init/: 001_init.sql  002_runs_orchestration_metadata.sql
docs/: architecture.md  handoff.md  workflow.md
docs/contracts/: bronze.md  silver.md
docs/phases/: PHASE_1_FOUNDATION.md  PHASE_7_AIRFLOW_FOUNDATION.md
notebooks/: 00_setup.rsnb
notebooks/bronze/: 00_source_profile_00_test.ipynb  00_source_profile_01_comments.ipynb  00_test_rust_kernel.ipynb  01_source_profile.rsnb
orchestration/airflow/: README.md
orchestration/airflow/config/: airflow_local_settings.py
orchestration/airflow/dags/: bronze_daily_ingest_dag.py  bronze_ref_ingest_dag.py  ping_runner.py  silver_conformed_pipeline_dag.py  silver_daily_build_dag.py  silver_ref_build_dag.py
orchestration/airflow/env/: airflow.env
orchestration/airflow/plugins/: rs_foundry_airflow.py  rs_foundry_client.py
src/: lib.rs
src/api/: docs.rs  handlers.rs  mod.rs  models.rs  routes.rs  state.rs
src/config/: mod.rs  paths.rs  settings.rs
src/core/: errors.rs  metadata.rs  mod.rs  schemas.rs  types.rs
src/io/: files.rs  http.rs  mod.rs  object_store.rs  parquet.rs  postgres.rs
src/jobs/: bronze_daily_job.rs  bronze_ref_job.rs  mod.rs  raw_landing.rs  silver_conformed_job.rs  silver_daily_job.rs  silver_ref_job.rs
src/orchestration/: dispatcher.rs  mod.rs  queue.rs  run_registry.rs  scheduler.rs
src/pipelines/: mod.rs
src/pipelines/bronze/: ingest_daily.rs  ingest_ref.rs  mod.rs
src/pipelines/gold/: build_features.rs  mod.rs
src/pipelines/silver/: build_conformed.rs  mod.rs  standardize_daily.rs  standardize_ref.rs
src/quality/: checks.rs  contracts.rs  mod.rs  report.rs
tests/: api_tests.rs  bronze_tests.rs  config_tests.rs  quality_tests.rs  silver_tests.rs
(+48 files in other folders)
