[package]
name = "rs-foundry"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "runner_api"
path = "src/bin/runner_api.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[[bin]]
name = "bronze_ref_ingest"
path = "src/bin/bronze_ref_ingest.rs"

[[bin]]
name = "bronze_daily_ingest"
path = "src/bin/bronze_daily_ingest.rs"

[[bin]]
name = "silver_ref_build"
path = "src/bin/silver_ref_build.rs"

[[bin]]
name = "silver_conformed_build"
path = "src/bin/silver_conformed_build.rs"

[[bin]]
name = "silver_daily_build"
path = "src/bin/silver_daily_build.rs"